split ServerImpl.hpp

--- a/websocket-cpp.vcxproj
+++ b/websocket-cpp.vcxproj
@@ -98,14 +98,15 @@ exit 0</Command>
     <ClCompile Include="websocket-cpp.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="details\Acceptor.hpp" />
     <ClInclude Include="details\base64.hpp" />
     <ClInclude Include="details\Connection.hpp" />
     <ClInclude Include="details\frames.hpp" />
     <ClInclude Include="details\handshake.hpp" />
     <ClInclude Include="details\http.hpp" />
     <ClInclude Include="details\http_parser.hpp" />
+    <ClInclude Include="details\ServerLogic.hpp" />
     <ClInclude Include="details\sha1.hpp" />
-    <ClInclude Include="ServerImpl.hpp" />
     <ClInclude Include="server_fwd.hpp" />
     <ClInclude Include="server_src.hpp" />
     <ClInclude Include="tests\catch_wrap.hpp" />
