--- a/websocket-cpp.vcxproj.filters
+++ b/websocket-cpp.vcxproj.filters
@@ -70,9 +70,6 @@
     <ClInclude Include="server_fwd.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ServerImpl.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Server.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -80,6 +77,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="details\frames.hpp">
+      <Filter>Header Files\details</Filter>
+    </ClInclude>
+    <ClInclude Include="details\Acceptor.hpp">
+      <Filter>Header Files\details</Filter>
+    </ClInclude>
+    <ClInclude Include="details\ServerLogic.hpp">
       <Filter>Header Files\details</Filter>
     </ClInclude>
   </ItemGroup>
